--- a/rules_java_gapic/resources/gradle/settings.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/settings.gradle.tmpl
@@ -1,7 +1,5 @@
-include rootDir.listFiles().findAll {
+rootDir.listFiles().findAll {
     it.isDirectory() && !(it =~ ".*/\\..*") && !(it =~ "^\\..*")
-}.collect {
-    it.getName()
-}.<String> toArray(new String[0])
-
-
+}.each {
+    include it.name
+}
