--- a/rules_java_gapic/resources/gradle/assembly.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/assembly.gradle.tmpl
@@ -1,16 +1,6 @@
-buildscript {
-  repositories {
-    mavenLocal()
-    maven {
-      url 'https://plugins.gradle.org/m2/'
-    }
-    mavenCentral()
-  }
-}
-
 subprojects {
   apply plugin: 'java'
-  apply plugin: 'maven'
+  apply plugin: 'maven-publish'
 
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
@@ -23,7 +13,7 @@ subprojects {
   }
 
   repositories {
-    mavenLocal()
     mavenCentral()
+    mavenLocal()
   }
 }
