--- a/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
@@ -1,25 +1,13 @@
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-}
-
-apply plugin: 'java'
-
 description = 'GRPC library for {{name}}'
 group = 'com.google.api.grpc'
-version = (findProperty('version') == 'unspecified') ? '0.0.0-SNAPSHOT' : version
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+version = (version == 'unspecified') ? '0.0.0-SNAPSHOT' : version
 
-repositories {
-  mavenCentral()
-  mavenLocal()
-}
+compileJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-  compile 'io.grpc:grpc-stub:{{version.io_grpc}}'
-  compile 'io.grpc:grpc-protobuf:{{version.io_grpc}}'
+  implementation 'io.grpc:grpc-stub:{{version.io_grpc}}'
+  implementation 'io.grpc:grpc-protobuf:{{version.io_grpc}}'
   {{extra_deps}}
 }
 
@@ -44,6 +32,3 @@ task sourcesJar(type: Jar) {
 artifacts {
   archives javadocJar, sourcesJar
 }
-
-compileJava.options.encoding = 'UTF-8'
-javadoc.options.encoding = 'UTF-8'
