--- a/rules_java_gapic/resources/gradle/proto.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/proto.gradle.tmpl
@@ -1,26 +1,14 @@
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-}
-
-apply plugin: 'java'
-
 description = 'PROTO library for {{name}}'
 group = 'com.google.api.grpc'
-version = (findProperty('version') == 'unspecified') ? '0.0.0-SNAPSHOT' : version
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+version = (version == 'unspecified') ? '0.0.0-SNAPSHOT' : version
 
-repositories {
-  mavenCentral()
-  mavenLocal()
-}
+compileJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-  compile 'com.google.protobuf:protobuf-java:{{version.com_google_protobuf}}'
-  compile '{{maven.com_google_api_api_common}}'
-  compile '{{maven.com_google_api_grpc_proto_google_common_protos}}'
+  implementation 'com.google.protobuf:protobuf-java:{{version.com_google_protobuf}}'
+  implementation '{{maven.com_google_api_api_common}}'
+  implementation '{{maven.com_google_api_grpc_proto_google_common_protos}}'
   {{extra_deps}}
 }
 
@@ -48,6 +36,3 @@ task sourcesJar(type: Jar) {
 artifacts {
   archives javadocJar, sourcesJar
 }
-
-compileJava.options.encoding = 'UTF-8'
-javadoc.options.encoding = 'UTF-8'
