--- a/rules_java_gapic/resources/gradle/settings.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/settings.gradle.tmpl
@@ -1,5 +1,5 @@
-rootDir.listFiles().findAll {
-    it.isDirectory() && !(it =~ ".*/\\..*") && !(it =~ "^\\..*")
-}.each {
+rootDir.listFiles().each {
+  if (it.isDirectory() && new File(it, 'build.gradle').exists()) {
     include it.name
+  }
 }
