--- a/rules_java_gapic/resources/gradle/proto.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/proto.gradle.tmpl
@@ -7,6 +7,7 @@ javadoc.options.encoding = 'UTF-8'
 
 dependencies {
   implementation 'com.google.protobuf:protobuf-java:{{version.com_google_protobuf}}'
+  implementation '{{maven.com_google_guava_guava}}'
   implementation '{{maven.com_google_api_api_common}}'
   implementation '{{maven.com_google_api_grpc_proto_google_common_protos}}'
   {{extra_deps}}
