--- a/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
@@ -8,6 +8,11 @@ javadoc.options.encoding = 'UTF-8'
 dependencies {
   implementation 'io.grpc:grpc-stub:{{version.io_grpc}}'
   implementation 'io.grpc:grpc-protobuf:{{version.io_grpc}}'
+
+  // TODO: remove when dropping Java 8 support.
+  // https://github.com/googleapis/gapic-generator-java/issues/888
+  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+
   {{extra_deps}}
 }
 
