--- a/gapic-generator-java/rules_java_gapic/resources/gradle/client_rest.gradle.tmpl
+++ b/gapic-generator-java/rules_java_gapic/resources/gradle/client_rest.gradle.tmpl
@@ -11,6 +11,11 @@ dependencies {
   implementation 'com.google.api:gax-httpjson:{{version.gax_httpjson}}'
   testImplementation 'com.google.api:gax-httpjson:{{version.gax_httpjson}}:testlib'
   testImplementation '{{maven.junit_junit}}'
+
+  // TODO: remove when dropping Java 8 support.
+  // https://github.com/googleapis/gapic-generator-java/issues/888
+  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+
   {{extra_deps}}
 }
 
