--- a/gapic-generator-java/rules_java_gapic/resources/gradle/proto.gradle.tmpl
+++ b/gapic-generator-java/rules_java_gapic/resources/gradle/proto.gradle.tmpl
@@ -10,6 +10,11 @@ dependencies {
   implementation '{{maven.com_google_guava_guava}}'
   implementation '{{maven.com_google_api_api_common}}'
   implementation '{{maven.com_google_api_grpc_proto_google_common_protos}}'
+
+  // TODO: remove when dropping Java 8 support.
+  // https://github.com/googleapis/gapic-generator-java/issues/888
+  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+
   {{extra_deps}}
 }
 
