--- a/gapic-generator-java/rules_java_gapic/resources/gradle/assembly.gradle.tmpl
+++ b/gapic-generator-java/rules_java_gapic/resources/gradle/assembly.gradle.tmpl
@@ -20,4 +20,6 @@ subprojects {
   publishing.publications {
     library(MavenPublication).from components.java
   }
+
+  task install(dependsOn: publishToMavenLocal) // create install "alias"
 }
