--- a/rules_java_gapic/resources/gradle/client_rest.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/client_rest.gradle.tmpl
@@ -6,15 +6,15 @@ compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-  implementation 'com.google.api:gax:{{version.gax}}'
-  testImplementation 'com.google.api:gax:{{version.gax}}:testlib'
-  implementation 'com.google.api:gax-httpjson:{{version.gax_httpjson}}'
-  testImplementation 'com.google.api:gax-httpjson:{{version.gax_httpjson}}:testlib'
-  testImplementation '{{maven.junit_junit}}'
+  implementation 'com.google.api:gax'
+  testImplementation 'com.google.api:gax'
+  implementation 'com.google.api:gax-httpjson'
+  testImplementation 'com.google.api:gax-httpjson'
+  testImplementation 'junit:junit:4.13.2'
 
   // TODO: remove when dropping Java 8 support.
   // https://github.com/googleapis/gapic-generator-java/issues/888
-  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+  implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
   {{extra_deps}}
 }
