--- a/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/grpc.gradle.tmpl
@@ -6,12 +6,12 @@ compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-  implementation 'io.grpc:grpc-stub:{{version.io_grpc}}'
-  implementation 'io.grpc:grpc-protobuf:{{version.io_grpc}}'
+  implementation 'io.grpc:grpc-stub'
+  implementation 'io.grpc:grpc-protobuf'
 
   // TODO: remove when dropping Java 8 support.
   // https://github.com/googleapis/gapic-generator-java/issues/888
-  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+  implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
   {{extra_deps}}
 }
