--- a/rules_java_gapic/resources/gradle/proto.gradle.tmpl
+++ b/rules_java_gapic/resources/gradle/proto.gradle.tmpl
@@ -6,14 +6,14 @@ compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 
 dependencies {
-  implementation 'com.google.protobuf:protobuf-java:{{version.com_google_protobuf}}'
-  implementation '{{maven.com_google_guava_guava}}'
-  implementation '{{maven.com_google_api_api_common}}'
-  implementation '{{maven.com_google_api_grpc_proto_google_common_protos}}'
+  implementation 'com.google.protobuf:protobuf-java'
+  implementation 'com.google.guava:guava'
+  implementation 'com.google.api:api-common'
+  implementation 'com.google.api.grpc:proto-google-common-protos'
 
   // TODO: remove when dropping Java 8 support.
   // https://github.com/googleapis/gapic-generator-java/issues/888
-  implementation '{{maven.javax_annotation_javax_annotation_api}}'
+  implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
   {{extra_deps}}
 }
